@@ -1,5 +1,6 @@
 # Head
 
+- Now copes with a wider variety of situations where a range that should be converted into a cell is passed to a match or indirect function
 - When simplifying arithmetic, ensures results are always numbers
 - Added an ENSURE_IS_NUMBER function to the runtime which turns anything that Excel thinks looks a bit like a number into a real number
 - Added an inlined_blank type, which is sometimes like a zero, and sometimes like an empty string
